# ckanext-text-processor

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/text_processor/: cli.py  helpers.py  plugin.py  views.py
ckanext/text_processor/assets/: script.js  webassets.yml
ckanext/text_processor/logic/: action.py  auth.py  schema.py  validators.py
ckanext/text_processor/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/text_processor/tests/logic/: test_action.py  test_auth.py  test_validators.py
