[metadata]
name = ckanext-text-processor
version = 0.0.1
description = Apply NLP on textual data for CKAN resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vuhitra i/o/ckanext-text-processor
author = toavina A.
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             text_processor = ckanext.text_processor.plugin:TextProcessorPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/text_processor/i18n/ckanext-text_processor.pot
width = 80

[init_catalog]
domain = ckanext-text_processor
input_file = ckanext/text_processor/i18n/ckanext-text_processor.pot
output_dir = ckanext/text_processor/i18n

[update_catalog]
domain = ckanext-text_processor
input_file = ckanext/text_processor/i18n/ckanext-text_processor.pot
output_dir = ckanext/text_processor/i18n
previous = true

[compile_catalog]
domain = ckanext-text_processor
directory = ckanext/text_processor/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
